@@ -1,13 +1,12 @@
 package roomescape.domain.reservation.service;
 
 import java.time.LocalDate;
-import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import roomescape.domain.reservationTime.domain.ReservationTime;
+import roomescape.domain.reservationTime.repository.ReservationTimeRepository;
 import roomescape.global.exception.RoomescapeBadRequestException;
-import roomescape.global.exception.RoomescapeNotFoundException;
 import roomescape.domain.reservation.domain.Reservation;
 import roomescape.domain.reservation.dto.ReservationRequest;
 import roomescape.domain.reservation.dto.ReservationResponse;
@@ -17,18 +16,20 @@ import roomescape.domain.reservation.repository.ReservationRepository;
 public class ReservationService {
 
     private final ReservationRepository reservationRepository;
+    private final ReservationTimeRepository reservationTimeRepository;
 
-    public ReservationService(final ReservationRepository reservationRepository) {
+    public ReservationService(final ReservationRepository reservationRepository,
+                              final ReservationTimeRepository reservationTimeRepository) {
         this.reservationRepository = reservationRepository;
+        this.reservationTimeRepository = reservationTimeRepository;
     }
 
-    @Transactional(readOnly = true)
     public List<ReservationResponse> getReservationResponses() {
 
-        return reservationRepository.getReservations()
+        return reservationRepository.findAll()
                 .stream()
                 .map(ReservationResponse::fromReservation)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
@@ -36,10 +37,13 @@ public class ReservationService {
         if (reservationRequest.date().isBefore(LocalDate.now())) {
             throw new RoomescapeBadRequestException("잘못된 예약 날짜입니다. 현재 날짜보다 이전 날짜에 예약할 수 없습니다.");
         }
-        if (reservationRequest.date().isEqual(LocalDate.now()) && reservationRequest.time().isBefore(LocalTime.now())) {
-            throw new RoomescapeBadRequestException("잘못된 예약 날짜입니다. 현재 시작 이전 시간에 예약할 수 없습니다.");
+
+        ReservationTime reservationTime = reservationTimeRepository.findById(reservationRequest.time());
+        if (reservationRequest.date().isEqual(LocalDate.now()) && reservationTime.isBefore()) {
+            throw new RoomescapeBadRequestException("잘못된 예약 날짜입니다. 현재 시각 이전 시간에 예약할 수 없습니다.");
         }
-        Reservation savedReservation = reservationRepository.addReservation(reservationRequest.newReservation());
+
+        Reservation savedReservation = reservationRepository.create(reservationRequest.toReservation(reservationTime));
 
         return ReservationResponse.fromReservation(savedReservation);
     }
@@ -50,10 +54,6 @@ public class ReservationService {
             throw new RoomescapeBadRequestException("잘못된 룸 아이디입니다.");
         }
 
-        boolean removed = reservationRepository.removeReservation(id);
-
-        if (!removed) {
-            throw new RoomescapeNotFoundException("존재하지 않은 예약입니다.");
-        }
+        reservationRepository.remove(id);
     }
 }
